Added instructions for exercise

--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -44,6 +44,8 @@
         fill="none"
         stroke-width="10"
       ></path>
+      <!-- Exercise: make something creative with basic SVG shapes -->
+       
     </svg>
   </body>
 </html>
