--- a/lesson_1/trasition.html
+++ b/lesson_1/trasition.html
@@ -3,22 +3,21 @@
   <head>
     <title>SVG with transition</title>
     <style>
-        body {
-            margin: 50px;
-            overflow: hidden;
-        }
-        rect {
-            stroke: black;
-            fill: red;
-            stroke-width: 20px;
-            /**/
-            transition: all 3000ms;
-        }
-        rect:hover {
-            fill:green;
-            stroke-width: 100px;
-        }
-
+      body {
+        margin: 50px;
+        overflow: hidden; /*remove scroll bar*/
+      }
+      rect {
+        stroke: black;
+        fill: red;
+        stroke-width: 20px;
+        /**/
+        transition: all 3000ms;
+      }
+      rect:hover {
+        fill: green;
+        stroke-width: 100px;
+      }
     </style>
   </head>
   <body>
