Last commit ending lesson 2, updating progress

--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -10,7 +10,7 @@
       }
       text {
         font-size: 72px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
     </style>
   </head>
@@ -46,6 +46,6 @@
       <text x="50" y="210">B</text>
       <text x="50" y="330">C</text>
       <text x="50" y="440">D</text>
-    </svg>
+    </svg>   
   </body>
 </html>
